--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "firebase": "^10.11.1",
     "http-proxy": "^1.18.1",
     "next": "14.2.3",
     "react": "^18",
